REGRESSION: Reloading a local file doesn't pick up changes https://bugs.webkit.org/show_bug.cgi?id=109344

Reviewed by Alexey Proskuryakov.

Source/WebCore:

Test: http/tests/cache/reload-main-resource.php

* loader/cache/CachedResource.cpp:
(WebCore::CachedResource::load):
* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::determineRevalidationPolicy):
(WebCore::CachedResourceLoader::cachePolicy): Don't use subresourceCachePolicy()
    for main resources.
* loader/cache/CachedResourceLoader.h:
(CachedResourceLoader):

LayoutTests:

* http/tests/cache/reload-main-resource-expected.txt: Added.
* http/tests/cache/reload-main-resource.php: Added.
* http/tests/cache/resources/reload-main-resource-iframe.php: Added.
* http/tests/misc/favicon-loads-with-images-disabled-expected.txt: This test
    was being loaded from memory cache in spite of being loaded via reload. We
    shouldn't do that.
* http/tests/misc/link-rel-icon-beforeload-expected.txt: This test
    was being loaded from memory cache in spite of being loaded via reload. We
    shouldn't do that.


Canonical link: https://commits.webkit.org/127932@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@142707 268f45cc-cd09-0410-ab3c-d52691b4dbfc